--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Header from "../components/Header.astro"
+import Header from "../components/Header.astro";
+import "@fontsource-variable/onest";
 interface Props {
 	description: string;
 	title: string;
@@ -27,18 +28,21 @@ const { description, title } = Astro.props;
 		color-scheme: dark;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #111e31;
+		font-family: "Onest Variable", sans-serif;
+		background: #151a36;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+
+	p {
+		color: rgba(255, 255, 255, 0.9);
+		line-height: 1.4;
+		margin-bottom: 1em;
+		font-weight: 100;
+		font-size: 1em;
+		letter-spacing: 0.5px;
+	}
+
+	p strong {
+		color: white;
+		font-weight: 700;
 	}
 </style>
