--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -5,19 +5,19 @@ import BentoItem from "./BentoItem.astro";
 <section
 	class={`
  w-full max-w-[1400px]
- grid grid-cols-10 auto-rows-[30rem] gap-4
+ grid grid-cols-10 auto-rows-[35rem] gap-6
  mx-auto p-20
 `}
 >
 	<BentoItem
-		class="col-span-10 md:col-span-4"
+		class="col-span-10 lg:col-span-4"
 		title="ANDORRA: EL CÉNIT DE LOS PREMIOS ESLAND"
 	>
 		<div
 			slot="image"
-			class="absolute left-0 top-0 bottom-0 w-full
-      h-full group-hover:scale-110 transition-scale duration-1000
-      ease-in-out opacity-90 bg-center bg-blend-luminosity bg-cover bg-no-repeat bg-blue-950 -z-10"
+			class="transition-scale absolute bottom-0 left-0 top-0
+			-z-10 h-full w-full bg-blue-950
+			bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
 			style="background-image: url('/mountain.webp')"
 		>
 		</div>
@@ -43,6 +43,12 @@ import BentoItem from "./BentoItem.astro";
 			style="background-image: url('/pistas.webp')"
 		>
 		</div>
+		<p slot="content" class="max-w-xl">
+			Este año, el momento de la alfombra azul será sustituido y mejorado,
+			gracias a los increíbles paisajes andorranos, por una <strong
+				>alfombra blanca en plena nieve</strong
+			>, situada en las <strong>pistas de esquí de Andorra</strong>.
+		</p>
 	</BentoItem>
 	<BentoItem
 		class="col-span-10 md:col-span-6"
@@ -53,10 +59,16 @@ import BentoItem from "./BentoItem.astro";
 			slot="image"
 			class="absolute left-0 top-0 bottom-0 w-full
     h-full group-hover:scale-110 transition-scale duration-1000
-    ease-in-out opacity-90 bg-center bg-blend-luminosity bg-cover bg-no-repeat bg-blue-950 -z-10"
+    ease-in-out opacity-90 bg-center bg-blend-luminosity bg-cover bg-no-repeat bg-blue-800 -z-10"
 			style="background-image: url('/grefposing.webp')"
 		>
 		</div>
+		<p slot="content" class="max-w-xl">
+			Una gala de premios llena de <strong
+				>contenido de primer nivel y muchas sorpresas</strong
+			>, en la que se descubrirán los <strong>ganadores</strong> de esta tercera
+			edición de los Premios ESLAND.
+		</p>
 	</BentoItem>
 
 	<BentoItem
@@ -67,9 +79,16 @@ import BentoItem from "./BentoItem.astro";
 			slot="image"
 			class="absolute left-0 top-0 bottom-0 w-full
   h-full group-hover:scale-110 transition-scale duration-1000
-  ease-in-out opacity-90 bg-center bg-blend-luminosity bg-cover bg-no-repeat bg-blue-950 -z-10"
+  ease-in-out opacity-90 bg-blend-luminosity bg-center bg-cover bg-no-repeat bg-blue-900 -z-10"
 			style="background-image: url('/laptop.webp')"
 		>
 		</div>
+		<p slot="content" class="max-w-xl">
+			Este año, el reddit no formará parte de las votaciones de los premios,
+			pero sí que <strong>formará parte de la comunidad</strong>. El subreddit oficial de los
+			Premios ESLAND está abierto para ti, para que compartas tus clips, tus
+			opiniones y para que <strong>interactúes con toda la comunidad</strong> del streaming
+			hispanohablante.
+		</p>
 	</BentoItem>
 </section>
