--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,23 +1,5 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Bento from "../../components/Bento.astro";
-import Video from "../../components/Video.astro";
-import Intro from "../../components/Intro.astro";
-import PreFooter from "../../components/PreFooter.astro";
-import Footer from "../../components/Footer.astro";
+import App from '../../components/App.astro'
 ---
 
-<Layout
-	title="Premios ESLAND 2024 - Celebrando lo mejor del streaming y los creadores contenido"
-	description="Descubre a los mejores creadores de contenido de Espana y Latinoamerica. Vota por tus favoritos! Celebra la innovacion y el talento de Twitch, Youtube y mas "
->
-	<Video />
-	<main>
-		<Intro />
-		<Bento />
-		<PreFooter />
-	</main>
-	<Footer />
-</Layout>
-
-<style></style>
+<App />
