--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,5 +1,10 @@
 ---
 import BentoItem from "./BentoItem.astro";
+
+import { getI18n } from "../i18n/";
+const { currentLocale } = Astro;
+
+const i18n = getI18n({ currentLocale });
 ---
 
 <section
@@ -9,10 +14,8 @@ import BentoItem from "./BentoItem.astro";
  mx-auto p-20
 `}
 >
-	<BentoItem
-		class="col-span-10 lg:col-span-4"
-		title="ANDORRA: EL CÉNIT DE LOS PREMIOS ESLAND"
-	>
+	<!-- BENTO ITEM 1 -->
+	<BentoItem class="col-span-10 lg:col-span-4" title={i18n.BENTO_TITLE_1}>
 		<div
 			slot="image"
 			class="transition-scale absolute bottom-0 left-0 top-0
@@ -22,18 +25,14 @@ import BentoItem from "./BentoItem.astro";
 		>
 		</div>
 
-		<p slot="content" class="max-w-xl">
-			Este año, el momento de la alfombra azul será sustituido y mejorado,
-			gracias a los increíbles paisajes andorranos, por una <strong
-				>alfombra blanca en plena nieve</strong
-			> , situada en las <strong>pistas de esquí de Andorra</strong>.
-		</p>
+		<p slot="content" class="max-w-xl" set:html={i18n} />
 	</BentoItem>
 
+	<!-- BENTO ITEM 2 -->
 	<BentoItem
 		class="col-span-10 md:col-span-6"
-		title="LA ALFOMBRA BLANCA"
-		subtitle="16 de febrero de 2024"
+		title={i18n.BENTO_TITLE_2}
+		subtitle={i18n.BENTO_SUBTITLE_2}
 	>
 		<div
 			slot="image"
@@ -43,17 +42,14 @@ import BentoItem from "./BentoItem.astro";
 			style="background-image: url('/pistas.webp')"
 		>
 		</div>
-		<p slot="content" class="max-w-xl">
-			Este año, el momento de la alfombra azul será sustituido y mejorado,
-			gracias a los increíbles paisajes andorranos, por una <strong
-				>alfombra blanca en plena nieve</strong
-			>, situada en las <strong>pistas de esquí de Andorra</strong>.
-		</p>
+		<p slot="content" class="max-w-xl" set:html={i18n} />
 	</BentoItem>
+
+	<!-- BENTO ITEM 3 -->
 	<BentoItem
 		class="col-span-10 md:col-span-6"
-		title="LA GALA"
-		subtitle="17 de febrero de 2024"
+		title={i18n.BENTO_TITLE_3}
+		subtitle={i18n.BENTO_SUBTITLE_3}
 	>
 		<div
 			slot="image"
@@ -63,18 +59,11 @@ import BentoItem from "./BentoItem.astro";
 			style="background-image: url('/grefposing.webp')"
 		>
 		</div>
-		<p slot="content" class="max-w-xl">
-			Una gala de premios llena de <strong
-				>contenido de primer nivel y muchas sorpresas</strong
-			>, en la que se descubrirán los <strong>ganadores</strong> de esta tercera
-			edición de los Premios ESLAND.
-		</p>
+		<p slot="content" class="max-w-xl" set:html={i18n} />
 	</BentoItem>
 
-	<BentoItem
-		class="col-span-10 md:col-span-4"
-		title="DISFRUTA DEL REDDIT DE LA COMUNIDAD"
-	>
+	<!-- BENTO ITEM 4 -->
+	<BentoItem class="col-span-10 md:col-span-4" title={i18n.BENTO_TITLE_4}>
 		<div
 			slot="image"
 			class="absolute left-0 top-0 bottom-0 w-full
@@ -83,12 +72,6 @@ import BentoItem from "./BentoItem.astro";
 			style="background-image: url('/laptop.webp')"
 		>
 		</div>
-		<p slot="content" class="max-w-xl">
-			Este año, el reddit no formará parte de las votaciones de los premios,
-			pero sí que <strong>formará parte de la comunidad</strong>. El subreddit oficial de los
-			Premios ESLAND está abierto para ti, para que compartas tus clips, tus
-			opiniones y para que <strong>interactúes con toda la comunidad</strong> del streaming
-			hispanohablante.
-		</p>
+		<p slot="content" class="max-w-xl" set:html={i18n}></p>
 	</BentoItem>
 </section>
