Update import paths in App.astro, Bento.astro, Header.astro, Intro.astro, Logo.astro, and PreFooter.astro

--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,7 +1,7 @@
 ---
 import BentoItem from "./BentoItem.astro";
 
-import { getI18n } from "../i18n/";
+import { getI18n } from "@/i18n/";
 const { currentLocale } = Astro;
 
 const i18n = getI18n({ currentLocale });
