--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Bento from "../components/Bento.astro";
-import Video from "../components/Video.astro";
-import Intro from "../components/Intro.astro";
-import PreFooter from "../components/PreFooter.astro";
-import Footer from "../components/Footer.astro";
+import Layout from "@/layouts/Layout.astro";
+import Bento from "@/components/Bento.astro";
+import Video from "@/components/Video.astro";
+import Intro from "@/components/Intro.astro";
+import PreFooter from "@/components/PreFooter.astro";
+import Footer from "@/components/Footer.astro";
 
 import {getI18n} from "../i18n/";
 const {currentLocale} = Astro
