--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,7 +1,7 @@
 ---
-import Logo from "../components/Logo.astro";
+import Logo from "@/components/Logo.astro";
 
-import { getI18n } from "../i18n/";
+import { getI18n } from "@/i18n/";
 const { currentLocale } = Astro;
 
 const i18n = getI18n({ currentLocale });
