--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,15 +2,15 @@
 import Logo from "@/components/Logo.astro";
 ---
 
-<header
+<header id="header-nav"
 	class={`
-fixed w-screen py-1 z-30 top-0
+fixed w-screen py-4 z-30 top-0
 px-8 lg:px-0
 `}
 >
 	<div class="grid grid-cols-3 max-w-7xl mx-auto items-center justify-between">
 		<a href="/" class="col-span-1">
-			<Logo class="w-12" />
+			<Logo class="w-24 h-auto" />
 		</a>
 		<nav class="col-span-1 justify-self-center">
 			<ul class="flex gap-4">
